--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -41,7 +41,7 @@
     bottom: 12px;
 }
 
-.topic-list-item .discourse-tags {
+.topic-list-item .link-bottom-line {
     padding-left: 55px;
 }
 .topic-list-item .main-link::before {
